--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
   <header>
     <nav>
-      <ul class= "item-container1">
-            <li class="col-md-3 col-sm-3 col-xs-3"><a href="#">Hats</a></li>
-            <li class="col-md-3 col-sm-3 col-xs-3"><a href="#">Gloves</a></li>
-            <li class="col-md-3 col-sm-3 col-xs-3"><a href="#">Scarves</a></li>
-            <li class="cart-info">
-            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-            </li>
+      <ul class= "item-container">
+        <li class="col-md-3 col-sm-3 col-xs-3"><a href="#">Hats</a></li>
+        <li class="col-md-3 col-sm-3 col-xs-3"><a href="#">Gloves</a></li>
+        <li class="col-md-3 col-sm-3 col-xs-3"><a href="#">Scarves</a></li>
+        <li class="cart-info">
+          <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+        </li>
       </ul>
     </nav>
     <h1>
@@ -40,64 +40,60 @@
     </aside>
     <section>
       <h2>Scarves</h2>
-  
-        <div class="item-container3">
-          <div class= "col-md-6">
-            <img src="images/reversible-plaid.jpg" alt="reversible plaid scarf">
-            <h3>Reversible Plaid</h3>
-            <p>Two classic patterns in one great look: This supersoft and cozy reversible scarf instantly doubles your street-style cred. 100% acrylic.</p>
-            <p>26.99</p>
+        <div class="container-fluid">
+          <div class="row">
+            <div class= "col-md-3 col-sm-6">
+              <img src="images/reversible-plaid.jpg" alt="reversible plaid scarf">
+              <h3>Reversible Plaid</h3>
+              <p>Two classic patterns in one great look: This supersoft and cozy reversible scarf instantly doubles your street-style cred. 100% acrylic.</p>
+              <p>26.99</p>
+            </div>
+            <div class= "col-md-3 col-sm-6"> 
+              <img src="images/twill.jpg" alt="ashby twill scarf">
+            <h3>Ashby Twill</h3>
+            <p>Faribault brings you the Ashby Twill Scarf in Natural. Woven with a 'broken' twill technique, the Ashby Twill Scarf has a slight zigzag texture. Made in USA, this timeless scarf is crafted with luxurious merino wool and finished with heather gray fringe. 100% Merino wool.</p>
+            <p>70.99</p>
+            </div>
+            <div class= "col-md-3 col-sm-6">
+              <img src="images/northern-lights.jpg" alt="northern lights scarf">
+              <h3>Northern Lights</h3>
+              <p>Handmade by women in Agra, sales provide medical and educational support in this remote area of India. Crinkly 100% cotton.</p>
+              <p>29.99</p>
+            </div>
+            <div class= "col-md-3 col-sm-6">
+              <img src="images/ombre-infinity.jpg" alt="ombre infinity scarf">
+              <h3>Ombre Infinity</h3>
+              <p>A dip-dye effect adds color and dimension to a cozy infinity scarf featuring a soft, chunky knit. 100% acrylic.</p>
+              <p>11.99</p>
+            </div>
+        </div>
+        <div class="row">
+
+          <div class= "col-md-3 col-sm-6">
+            <img src="images/fringed-plaid.jpeg" alt="fringed plaid scarf">
+              <h3>Fringed Plaid</h3>
+              <p>Generously sized, extra soft and featuring a dazzling fringe, this scarf is rendered in a versatile gray, black and white plaid. Expertly beat the cold with style. 100% acrylic.</p>
+              <p>18.99</p>
           </div>
-
-        <div class= "col-md-6"> 
-          <img src="images/fringed-plaid.jpeg" alt="fringed plaid scarf">
-          <h3>Fringed Plaid</h3>
-          <p>Generously sized, extra soft and featuring a dazzling fringe, this scarf is rendered in a versatile gray, black and white plaid. Expertly beat the cold with style. 100% acrylic.</p>
-          <p>18.99</p>
-        </div>
-
-        <div class= "col-md-6">
-          <img src="images/northern-lights.jpg" alt="northern lights scarf">
-          <h3>Northern Lights</h3>
-          <p>Handmade by women in Agra, sales provide medical and educational support in this remote area of India. Crinkly 100% cotton.</p>
-          <p>29.99</p>
-        </div>
-
-        <div class= "col-md-6">
-          <img src="images/ombre-infinity.jpg" alt="ombre infinity scarf">
-          <h3>Ombre Infinity</h3>
-          <p>A dip-dye effect adds color and dimension to a cozy infinity scarf featuring a soft, chunky knit. 100% acrylic.</p>
-          <p>11.99</p>
-        </div>
-
-        <div class= "col-md-6">
-          <img src="images/twill.jpg" alt="ashby twill scarf">
-          <h3>Ashby Twill</h3>
-          <p>Faribault brings you the Ashby Twill Scarf in Natural. Woven with a 'broken' twill technique, the Ashby Twill Scarf has a slight zigzag texture. Made in USA, this timeless scarf is crafted with luxurious merino wool and finished with heather gray fringe. 100% Merino wool.</p>
-          <p>70.99</p>
-        </div>
-
-        <div class= "col-md-6">
-          <img src="images/multi-color.jpeg" alt="multi color scarf">
-          <h3>Multi Color</h3>
-          <p class="multi">The Who What Where Oversize Color-Block Square Scarf is big, bold, and designed to twist and wrap any way you wish. All the colors of the season are harmonized in this oversize accent, so you can adjust to contrast or match your outfit; soft and lush, it’s your stylish standoff against cold AC and unexpected fall breezes. 100% acrylic.</p>
-          <p>22.99</p>
-        </div>
-        
-        
-        <div class= "col-md-6">
-          <img src="images/wool-cable.jpeg" alt="wool cable knit scarf">
-          <h3>Wool Cable Knit</h3>
-          <p>Warm yourself with this women's natural cable knit scarf, crafted from 100% Merino wool. Imported.</p>
-          <p>49.99</p>
-        </div>
-
-        <div class= "col-md-6">
+          <div class= "col-md-3 col-sm-6">
+            <img src="images/multi-color.jpeg" alt="multi color scarf">
+            <h3>Multi Color</h3>
+            <p class="multi">The Who What Where Oversize Color-Block Square Scarf is big, bold, and designed to twist and wrap any way you wish. All the colors of the season are harmonized in this oversize accent, so you can adjust to contrast or match your outfit; soft and lush, it’s your stylish standoff against cold AC and unexpected fall breezes. 100% acrylic.</p>
+            <p>22.99</p>
+          </div>
+          <div class= "col-md-3 col-sm-6">
+            <img src="images/wool-cable.jpeg" alt="wool cable knit scarf">
+            <h3>Wool Cable Knit</h3>
+            <p>Warm yourself with this women's natural cable knit scarf, crafted from 100% Merino wool. Imported.</p>
+            <p>49.99</p>
+          </div>
+          <div class= "col-md-3 col-sm-6">
           <img src="images/etro.png" alt="etro paisley print silk scarf">
            <h3>Etro Paisley-Print Silk</h3>
           <p>Luxurious silk scarf with subtle paisley pattern. 100% silk.</p>
           <p>26.99</p>
         </div>
+      </div>
       </div>
     </section>
   </main>
